feat: add support for polygon zkevm
- [x] Add deploy scripts
- [x] Add documentation for deployment and contract calls costs
- [x] Add new troubleshooting cases
- [x] Update deploy config with new networks
- [x] Support gas price for benchmarks
- [x] Increase transaction timeout for benchmarks

--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -16,6 +16,8 @@ POLYGON_ETHERSCAN_API_KEY=
 LINEA_ETHERSCAN_API_KEY=
 # api key for zksync etherscan
 ZK_SYNC_ETHERSCAN_API_KEY=
+# api key for polygon zkevm etherscan
+POLYGON_ZKEVM_ETHERSCAN_API_KEY=
 # RPC url to talk to optimism mainnet
 SEPOLIA_RPC_URL=
 # RPC url to talk to optimism sepolia
@@ -34,6 +36,10 @@ LINEA_SEPOLIA_RPC_URL=
 ZK_SYNC_ERA_RPC_URL=
 # RPC url to talk to zksync sepolia (testnet)
 ZK_SYNC_SEPOLIA_RPC_URL=
+# RPC url to talk to polygon zkevm mainnet
+POLYGON_ZKEVM_RPC_URL=
+# RPC url to talk to polygon zkevm cardona (testnet)
+POLYGON_CARDONA_RPC_URL=
 # Forking url for testing
 FORKING_URL=
 # Gas price to use for transactions
