--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -93,6 +93,8 @@
     "deploy:linea-sepolia": "pnpm run deploy --network linea_sepolia",
     "deploy:zksync-era": "pnpm run deploy --network zksync_era",
     "deploy:zksync-sepolia": "pnpm run deploy --network zksync_sepolia",
+    "deploy:polygon-zkevm": "pnpm run deploy --network polygon_zkevm",
+    "deploy:polygon-cardona-zkevm": "pnpm run deploy --network polygon_cardona_zkevm",
     "deploy-poll:localhost": "pnpm run deploy-poll",
     "deploy-poll:mainnet": "pnpm run deploy-poll --network mainnet",
     "deploy-poll:sepolia": "pnpm run deploy-poll --network sepolia",
@@ -112,6 +114,8 @@
     "deploy-poll:linea-sepolia": "pnpm run deploy-poll --network linea_sepolia",
     "deploy-poll:zksync-era": "pnpm run deploy-poll --network zksync_era",
     "deploy-poll:zksync-sepolia": "pnpm run deploy-poll --network zksync_sepolia",
+    "deploy-poll:polygon-zkevm": "pnpm run deploy-poll --network polygon_zkevm",
+    "deploy-poll:polygon-cardona-zkevm": "pnpm run deploy-poll --network polygon_cardona_zkevm",
     "merge:localhost": "pnpm run merge",
     "merge:mainnet": "pnpm run merge --network mainnet",
     "merge:sepolia": "pnpm run merge --network sepolia",
@@ -131,6 +135,8 @@
     "merge:linea-sepolia": "pnpm run merge --network linea_sepolia",
     "merge:zksync-era": "pnpm run merge --network zksync_era",
     "merge:zksync-sepolia": "pnpm run merge --network zksync_sepolia",
+    "merge:polygon-zkevm": "pnpm run merge --network polygon_zkevm",
+    "merge:polygon-cardona-zkevm": "pnpm run merge --network polygon_cardona_zkevm",
     "prove:localhost": "pnpm run prove",
     "prove:mainnet": "pnpm run prove --network mainnet",
     "prove:sepolia": "pnpm run prove --network sepolia",
@@ -150,6 +156,8 @@
     "prove:linea-sepolia": "pnpm run prove --network linea_sepolia",
     "prove:zksync-era": "pnpm run prove --network zksync_era",
     "prove:zksync-sepolia": "pnpm run prove --network zksync_sepolia",
+    "prove:polygon-zkevm": "pnpm run prove --network polygon_zkevm",
+    "prove:polygon-cardona-zkevm": "pnpm run prove --network polygon_cardona_zkevm",
     "submitOnChain:localhost": "pnpm run submitOnChain --network localhost",
     "submitOnChain:mainnet": "pnpm run submitOnChain --network mainnet",
     "submitOnChain:sepolia": "pnpm run submitOnChain --network sepolia",
@@ -169,6 +177,8 @@
     "submitOnChain:linea-sepolia": "pnpm run submitOnChain --network linea_sepolia",
     "submitOnChain:zksync-era": "pnpm run submitOnChain --network zksync_era",
     "submitOnChain:zksync-sepolia": "pnpm run submitOnChain --network zksync_sepolia",
+    "submitOnChain:polygon-zkevm": "pnpm run submitOnChain --network polygon_zkevm",
+    "submitOnChain:polygon-cardona-zkevm": "pnpm run submitOnChain --network polygon_cardona_zkevm",
     "verify:sepolia": "pnpm run verify --network sepolia",
     "verify:mainnet": "pnpm run verify --network mainnet",
     "verify:optimism-sepolia": "pnpm run verify --network optimism_sepolia",
@@ -186,6 +196,8 @@
     "verify:linea-sepolia": "pnpm run verify --network linea_sepolia",
     "verify:zksync-era": "pnpm run verify --network zksync_era",
     "verify:zksync-sepolia": "pnpm run verify --network zksync_sepolia",
+    "verify:polygon-zkevm": "pnpm run verify --network polygon_zkevm",
+    "verify:polygon-cardona-zkevm": "pnpm run verify --network polygon_cardona_zkevm",
     "benchmark:sepolia": "hardhat benchmark --network sepolia",
     "benchmark:mainnet": "hardhat benchmark --network mainnet",
     "benchmark:optimism-sepolia": "hardhat benchmark --network optimism_sepolia",
@@ -203,7 +215,9 @@
     "benchmark:linea": "pnpm run benchmark --network linea",
     "benchmark:linea-sepolia": "pnpm run benchmark --network linea_sepolia",
     "benchmark:zksync-era": "pnpm run benchmark --network zksync_era",
-    "benchmark:zksync-sepolia": "pnpm run benchmark --network zksync_sepolia"
+    "benchmark:zksync-sepolia": "pnpm run benchmark --network zksync_sepolia",
+    "benchmark:polygon-zkevm": "pnpm run benchmark --network polygon_zkevm",
+    "benchmark:polygon-cardona-zkevm": "pnpm run benchmark --network polygon_cardona_zkevm"
   },
   "dependencies": {
     "@excubiae/contracts": "^0.11.0",
