feat(coordinator): workflow + fixed tests + reuse factories
feat(coordinator): zkeys and wallet health checks

fix(coordinator): remove workflow + fix typo + move test to start

fix(coordinator): use action checkout in workflow

fix(coordinator): delete workflow

feat(coordinator): fix unit tests

fix(coordinator): subgraph tests working

fix(coordinator): proof tests working

fix(coordinator): remove e2e from aa tests. they are already in deploy

feat(coordinator): fixing e2e tests

feat(coordinator): reuse factories

fix(coordinator): unset env variable in build step

feat(coordinator): fixing rapidsnark path

feat(coordinator): test docker in workflow

fix(coordinator): activate guard test

fix(coordinator): separate docker in other workflow

--- a/apps/coordinator/package.json
+++ b/apps/coordinator/package.json
@@ -22,7 +22,7 @@
     "run:node": "node --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));'",
     "start": "pnpm run run:node ./ts/main.ts",
     "start:prod": "pnpm run run:node build/ts/main.js",
-    "test": "jest --testPathIgnorePatterns=e2e.deploy.test.ts --testPathIgnorePatterns=e2e.test.ts --forceExit",
+    "test": "jest --testPathIgnorePatterns=tests/ --forceExit",
     "test:coverage": "jest --coverage --forceExit",
     "test:e2e": "jest ./tests/*.test.ts --forceExit --runInBand",
     "types": "tsc -p tsconfig.json --noEmit",
