feat(coordinator): add workflow + health check
fix(coordinator): rapidsnark works in docker

feat(coordinator): zkeys and wallet health checks

fix(coordinator): remove workflow + fix typo + move test to start

fix(coordinator): use action checkout in workflow

fix(coordinator): delete workflow

--- a/apps/coordinator/Dockerfile
+++ b/apps/coordinator/Dockerfile
@@ -1,36 +1,45 @@
 # Copy source code and build the project
 FROM node:20-alpine AS builder
+RUN npm i -g pnpm@9
 
 WORKDIR /builder
 
-# This copies all the monorepo
- COPY ../../ .
+# Copy the entire monorepo to maintain workspace structure
+COPY . .
 
+WORKDIR /builder/apps/coordinator
 
-# Copy coordinator app files
-# It is supposed to be faster but @maci-protocol packages versions are not working
-# COPY apps/coordinator .
+# Update @maci-protocol package versions in coordinator specifically
+RUN sed -i 's/"@maci-protocol\/contracts": "[^"]*"/"@maci-protocol\/contracts": "ci"/g' package.json && \
+    sed -i 's/"@maci-protocol\/crypto": "[^"]*"/"@maci-protocol\/crypto": "ci"/g' package.json && \
+    sed -i 's/"@maci-protocol\/domainobjs": "[^"]*"/"@maci-protocol\/domainobjs": "ci"/g' package.json && \
+    sed -i 's/"@maci-protocol\/sdk": "[^"]*"/"@maci-protocol\/sdk": "ci"/g' package.json && \
+    sed -i 's/"@maci-protocol\/subgraph": "[^"]*"/"@maci-protocol\/subgraph": "ci"/g' package.json
 
-RUN npm i -g pnpm@9
 RUN pnpm install
 RUN pnpm run build
 
-
 # Create image by copying build artifacts
-FROM node:20-alpine AS runner
+FROM node:20-slim AS runner
 RUN npm i -g pnpm@9
 
-USER node
+RUN apt-get update && apt-get install -y \
+    wget \
+    libgmp10 \
+    libsodium23 \
+    libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
 
-# monorepo root directory
+RUN mkdir -p /home/node/rapidsnark/build; \
+    wget -qO /home/node/rapidsnark/build/prover https://maci-devops-zkeys.s3.ap-northeast-2.amazonaws.com/rapidsnark-linux-amd64-1c137; \
+    chmod +x /home/node/rapidsnark/build/prover
+
+USER node
 WORKDIR /maci
-COPY --chown=node:node  --from=builder /builder/ ./
+COPY --chown=node:node --from=builder /builder/ ./
 
 RUN pnpm run download-zkeys:test:coordinator
 
-RUN mkdir -p ~/rapidsnark/build; \
-    wget -qO ~/rapidsnark/build/prover https://maci-devops-zkeys.s3.ap-northeast-2.amazonaws.com/rapidsnark-linux-amd64-1c137; \
-    chmod +x ~/rapidsnark/build/prover
 
 # coordinator directory
 WORKDIR /maci/apps/coordinator
@@ -39,4 +48,3 @@ ENV NODE_OPTIONS="--max-old-space-size=8192"
 
 
 CMD ["pnpm","start:prod"]
-
