chore(contracts): benchmarks for mainnets
- [x] Add docs for testing commands
- [x] Update costs docs page
- [x] Add hardhat tasks e2e test
- [x] Use nonce for contract deployment
- [x] Add missing env variables
- [x] Add hardhat config for deployment
- [x] Update default deployed contracts
- [x] Add PRIVATE_KEY env
- [x] Remove testScriptLocalhost.sh

--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -1,15 +1,30 @@
 MNEMONIC=
+PRIVATE_KEY=
 INITIAL_INDEX=0
 # api key for eth mainnet etherscan
 ETH_ETHERSCAN_API_KEY=
 # RPC url to talk to optimism mainnet
 SEPOLIA_RPC_URL=
+# RPC url to talk to optimism
+OP_RPC_URL=
 # RPC url to talk to optimism sepolia
 OP_SEPOLIA_RPC_URL=
+# RPC url to talk to base
+BASE_RPC_URL=
+# RPC url to talk to base sepolia
+BASE_SEPOLIA_RPC_URL=
+# RPC url to talk to gnosis
+GNOSIS_RPC_URL=
+# RPC url to talk to gnosis chiado
+GNOSIS_CHIADO_RPC_URL=
 # RPC url to talk to scroll mainnet
 SCROLL_RPC_URL=
 # RPC url to talk to scroll sepolia
 SCROLL_SEPOLIA_RPC_URL=
+# RPC url to talk to arbitrum
+ARBITRUM_RPC_URL=
+# RPC url to talk to arbitrum sepolia (testnet)
+ARBITRUM_SEPOLIA_RPC_URL=
 # RPC url to talk to mainnet
 MAINNET_RPC_URL=
 # RPC url to talk to linea
@@ -24,6 +39,10 @@ ZK_SYNC_SEPOLIA_RPC_URL=
 POLYGON_ZKEVM_RPC_URL=
 # RPC url to talk to polygon zkevm cardona (testnet)
 POLYGON_CARDONA_RPC_URL=
+# RPC url to talk to polygon
+POLYGON_RPC_URL=
+# RPC url to talk to polygon amoy
+POLYGON_AMOY_RPC_URL=
 # Forking url for testing
 FORKING_URL=
 # Gas price to use for transactions
