--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -43,8 +43,8 @@
     "postbuild": "cp -r ./artifacts ./build",
     "types": "tsc -p tsconfig.json --noEmit",
     "docs": "hardhat docgen",
-    "test": "hardhat test --network hardhat",
-    "test:hardhat": "bash ./testScriptLocalhost.sh",
+    "test": "hardhat test ./tests/**/*.test.ts --network hardhat",
+    "test:hardhat": "hardhat test --network hardhat ./e2e/hardhatTasks.test.ts",
     "test:maci": "pnpm run test ./tests/MACI.test.ts",
     "test:poll": "pnpm run test ./tests/Poll.test.ts",
     "test:messageProcessor": "pnpm run test ./tests/MessageProcessor.test.ts",
@@ -185,6 +185,7 @@
     "verify:optimism": "pnpm run verify --network optimism",
     "verify:scroll": "pnpm run verify --network scroll",
     "verify:scroll-sepolia": "pnpm run verify --network scroll_sepolia",
+    "verify:arbitrum": "pnpm run verify --network arbitrum",
     "verify:arbitrum-sepolia": "pnpm run verify --network arbitrum_sepolia",
     "verify:base": "pnpm run verify --network base",
     "verify:base-sepolia": "pnpm run verify --network base_sepolia",
