--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -5,6 +5,6 @@
     "outDir": "./build",
     "target": "ES2020"
   },
-  "include": ["./ts", "./scripts", "./tests", "./typechain-types", "./tasks"],
+  "include": ["./ts", "./scripts", "./tests", "./e2e", "./typechain-types", "./tasks"],
   "files": ["./hardhat.config.ts"]
 }
