feat(coordinator): redis added + endpoint to schedule poll finalization + schedule at deployment

--- a/apps/coordinator/.env.example
+++ b/apps/coordinator/.env.example
@@ -46,6 +46,10 @@ COORDINATOR_ALLOWED_ORIGINS=
 # Specify port for coordinator service (optional)
 COORDINATOR_PORT=
 
+# Redis configuration
+COORDINATOR_REDIS_HOST="localhost"
+COORDINATOR_REDIS_PORT="6379"
+
 # Subgraph name
 SUBGRAPH_NAME="maci-platform-subgraph"
 
