--- a/apps/coordinator/package.json
+++ b/apps/coordinator/package.json
@@ -46,6 +46,7 @@
     "@nestjs/websockets": "^11.1.3",
     "@nomicfoundation/hardhat-ethers": "^3.0.9",
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
+    "@redis/client": "^5.6.0",
     "@zerodev/ecdsa-validator": "5.4.9",
     "@zerodev/permissions": "5.5.11",
     "@zerodev/sdk": "5.4.40",
