feat: make ESupportedChains exportable so apps can use it

--- a/apps/coordinator/package.json
+++ b/apps/coordinator/package.json
@@ -96,6 +96,10 @@
       "<rootDir>/tests"
     ],
     "testRegex": ".*\\.test\\.ts$",
+    "moduleNameMapper": {
+      "^@excubiae/contracts$": "<rootDir>/ts/jest/__mocks__/@excubiae/contracts.ts",
+      "^@openzeppelin/merkle-tree$": "<rootDir>/ts/jest/__mocks__/@openzeppelin/merkle-tree.ts"
+    },
     "transform": {
       "^.+\\.js$": [
         "<rootDir>/ts/jest/transform.js",
