feat(coordinator): finalize function in the scheduler module
feat(coordinator): send values and keys in getAll + more buffer time to run finalize

feat(coordinator): export proof services

fix(scheduler): use only isTallied and not isMerged

feat(coordinator): resechedule if vote period has not ended

fix(coordinator): use map instead of for each

feat(coordinator): check merge on-chain + tallied first in status

feat(sdk): add types and enums in sdk/browser

fix(coordinator): change it for test

--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -3,7 +3,7 @@ PRIVATE_KEY=
 INITIAL_INDEX=0
 # api key for eth mainnet etherscan
 ETH_ETHERSCAN_API_KEY=
-# RPC url to talk to optimism mainnet
+# RPC url to talk to mainnet sepolia
 SEPOLIA_RPC_URL=
 # RPC url to talk to optimism
 OP_RPC_URL=
