--- a/.github/workflows/reusable-e2e.yml
+++ b/.github/workflows/reusable-e2e.yml
@@ -24,12 +24,11 @@ jobs:
           node-version: 20
           cache: "pnpm"
 
-      # Check for changes in the 'circuit' folder
-      - name: Get changed files
-        id: get-changed-files
-        uses: jitterbit/get-changed-files@v1
-        with:
-          format: "csv"
+      # - name: Get changed files
+      #   id: get-changed-files
+      #   uses: jitterbit/get-changed-files@v1
+      #   with:
+      #     format: "csv"
 
       - name: Check for changes in 'circuit' folder
         id: check_changes
