chore: enable get-changed-files for workflows

--- a/.github/workflows/coordinator.yml
+++ b/.github/workflows/coordinator.yml
@@ -58,11 +58,11 @@ jobs:
           node-version: 20
           cache: "pnpm"
 
-      # - name: Get changed files
-      #   id: get-changed-files
-      #   uses: jitterbit/get-changed-files@v1
-      #   with:
-      #     format: "csv"
+      - name: Get changed files
+        id: get-changed-files
+        uses: jitterbit/get-changed-files@v1
+        with:
+          format: "csv"
 
       - name: Check for changes in 'circuit' folder
         id: check_changes
