chore(coordinator): use default vars for coordinator unit test workflow

--- a/.github/workflows/coordinator.yml
+++ b/.github/workflows/coordinator.yml
@@ -7,27 +7,22 @@ on:
 
 env:
   NODE_OPTIONS: "--max-old-space-size=8192"
-  TTL: ${{ vars.COORDINATOR_TTL }}
-  LIMIT: ${{ vars.COORDINATOR_LIMIT }}
-  COORDINATOR_PUBLIC_KEY_PATH: ${{ vars.COORDINATOR_PUBLIC_KEY_PATH }}
-  COORDINATOR_PRIVATE_KEY_PATH: ${{ vars.COORDINATOR_PRIVATE_KEY_PATH }}
+  TTL: 60000
+  LIMIT: 10
+  COORDINATOR_PUBLIC_KEY_PATH: "./public.key"
+  COORDINATOR_PRIVATE_KEY_PATH: "./private.key"
   COORDINATOR_MACI_PRIVATE_KEY: "macisk.5e203463e80f38f11fecbfeca93cbd78ec40b7d82ccf1ba6068fbc23b99f57b1"
-  COORDINATOR_TALLY_ZKEY_NAME: ${{ vars.COORDINATOR_TALLY_ZKEY_NAME }}
-  COORDINATOR_MESSAGE_PROCESS_ZKEY_NAME: ${{ vars.COORDINATOR_MESSAGE_PROCESS_ZKEY_NAME }}
-  COORDINATOR_POLL_JOINING_ZKEY_NAME: ${{ vars.COORDINATOR_POLL_JOINING_ZKEY_NAME }}
-  COORDINATOR_POLL_JOINED_ZKEY_NAME: ${{ vars.COORDINATOR_POLL_JOINED_ZKEY_NAME }}
-  COORDINATOR_RAPIDSNARK_EXE: ${{ vars.COORDINATOR_RAPIDSNARK_EXE }}
-  COORDINATOR_ZKEY_PATH: ${{ vars.COORDINATOR_ZKEY_PATH }}
+  COORDINATOR_TALLY_ZKEY_NAME: "VoteTally_10-1-2_test"
+  COORDINATOR_MESSAGE_PROCESS_ZKEY_NAME: "MessageProcessor_10-20-2_test"
+  COORDINATOR_POLL_JOINING_ZKEY_NAME: "PollJoining_10_test"
+  COORDINATOR_POLL_JOINED_ZKEY_NAME: "PollJoined_10_test"
+  COORDINATOR_RAPIDSNARK_EXE: ""
+  COORDINATOR_ZKEY_PATH: "./zkeys"
   COORDINATOR_RPC_URL: "http://localhost:8545"
-  COORDINATOR_ADDRESSES: ${{ vars.COORDINATOR_ADDRESSES }}
-  COORDINATOR_ALLOWED_ORIGINS: ${{ vars.COORDINATOR_ALLOWED_ORIGINS }}
-  COORDINATOR_REDIS_HOST: ${{ vars.COORDINATOR_REDIS_HOST }}
-  COORDINATOR_REDIS_PORT: ${{ vars.COORDINATOR_REDIS_PORT }}
-  COORDINATOR_PORT: ${{ vars.COORDINATOR_PORT }}
-  SUBGRAPH_NAME: ${{ vars.COORDINATOR_SUBGRAPH_NAME }}
-  SUBGRAPH_PROVIDER_URL: ${{ vars.COORDINATOR_SUBGRAPH_PROVIDER_URL }}
+  SUBGRAPH_NAME: "maci-coordinator-subgraph"
+  SUBGRAPH_PROVIDER_URL: "https://api.studio.thegraph.com/deploy/"
   SUBGRAPH_DEPLOY_KEY: "subgraph-deploy-key"
-  SUBGRAPH_FOLDER: ${{ vars.COORDINATOR_SUBGRAPH_FOLDER }}
+  SUBGRAPH_FOLDER: "./node_modules/@maci-protocol/subgraph"
   ZERODEV_BUNDLER_RPC_OP_SEPOLIA: "https://rpc.zerodev.app/api/v3"
   PRIVATE_KEY: "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
 
@@ -82,11 +77,6 @@ jobs:
       - name: Install
         run: |
           pnpm install --frozen-lockfile --prefer-offline
-
-      - name: Copy env file
-        working-directory: apps/coordinator
-        run: |
-          cp .env.example .env
 
       - name: Build
         run: |
