--- a/.github/workflows/nightly-mac.yml
+++ b/.github/workflows/nightly-mac.yml
@@ -1,6 +1,7 @@
-name: Nightly Macos
+name: Nightly Unit Tests Macos
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: 0 0 * * *
 
@@ -61,10 +62,6 @@ jobs:
 
   unit:
     runs-on: macos-14
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [20]
 
     steps:
       - uses: actions/checkout@v4
@@ -74,10 +71,10 @@ jobs:
         with:
           version: 9
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           cache: "pnpm"
 
       - name: Download circom Binary v2.1.6
