--- a/apps/coordinator/.env.example
+++ b/apps/coordinator/.env.example
@@ -34,6 +34,9 @@ COORDINATOR_RAPIDSNARK_EXE=
 # Location of zkey, wasm files
 COORDINATOR_ZKEY_PATH="../../zkeys"
 
+# blocks per batch when retrieving on-chain events
+COORDINATOR_BLOCK_BATCH_SIZE=1000
+
 # Coordinator RPC url
 COORDINATOR_RPC_URL=http://localhost:8545
 
